--- a/cart/templates/cart/cart-view.html
+++ b/cart/templates/cart/cart-view.html
@@ -53,7 +53,7 @@
 
                 &nbsp;
 
-                <select id="select">
+                <select id="select{{ product.id }}">
                   <option selected>{{ item.qty }}</option>
 
                   <option value="">1</option>
@@ -113,24 +113,54 @@
 <script>
 
 $(document).on('click', '.delete-button', function(e){
-    e.prevent.Default();
+    e.preventDefault();
 
     $.ajax({
         type : 'POST',
         url : '{% url 'cart:cart_delete' %}',
         data : {
             product_id : $(this).data('index'),
-            csrfmiddlewaretoken: '{{ csrf_token }}'',
+            csrfmiddlewaretoken: '{{ csrf_token }}',
             action: 'post',
         },
         success: function(response){
             document.getElementById('lblCartCount').textContent = response.qty
             document.getElementById('total').textContent = response.total
+
+            location.reload()
         },
         error: function(error, status){
             console.log(error)
 
-    }
+    },
+    })
+
+})
+
+$(document).on('click', '.update-button', function(e){
+    e.preventDefault();
+
+    var product_id = $(this).data('index')
+
+    $.ajax({
+        type : 'POST',
+        url : '{% url 'cart:cart_update' %}',
+        data : {
+            product_id : $(this).data('index'),
+            product_qty: $('#select' +product_id+ ' option:selected').text(),
+            csrfmiddlewaretoken: '{{ csrf_token }}',
+            action: 'post',
+        },
+        success: function(response){
+            document.getElementById('lblCartCount').textContent = response.qty
+            document.getElementById('total').textContent = response.total
+
+            location.reload()
+        },
+        error: function(error, status){
+            console.log(error)
+
+    },
     })
 
 })
