--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -52,6 +52,12 @@
     <title>BigCorp</title>
 
     <style>
+        .form-layout {
+        border-radius: 20px;
+        width: 500px;
+    }
+
+
          .badge {
         padding-left: 9px;
         padding-right: 9px;
