--- a/account/templates/account/dashboard/dashboard.html
+++ b/account/templates/account/dashboard/dashboard.html
@@ -1,10 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{%  extends "base.html" %}
 
-</body>
-</html>
+{% load static %}
+
+
+
+{% block content %}
+
+    <br>
+    <div class="container bg-white shadow-md p-3">
+        <h4>Welcome, {{ user.username }}!</h4>
+
+        <hr>
+
+        <h6>Personal information</h6>
+
+        <a href="{% url 'account:logout' %}">
+        <button class="btn btn-primary">
+            Logout
+            </button>
+        </a>
+
+        <a href="{% url 'account:profile-management' %}">
+            <button class="btn btn-success">
+                Profile-management
+                </button>
+            </a>
+        
+            <a href="{% url 'account:delete-user' %}">
+                <button class="btn btn-warning">
+                    Delete Account
+                    </button>
+                </a>
+
+    </div>
+{% endblock %}
