added fonts, stripe payment

--- a/account/templates/account/login/login.html
+++ b/account/templates/account/login/login.html
@@ -58,9 +58,13 @@
     </ul>
 {% endif %}
 
-    <div class="text-center">
+    <div class="text-center m-1">
         <a href="{% url 'account:register' %}">Dont have an account?</a>
     </div>
+    <div class="text-center m-1">
+        <a href="{% url 'account:password_reset' %}">Password reset</a>
+    </div>
+
 
 
 
