--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -152,7 +152,7 @@
       <div class="container">
         <a class="navbar-brand" href="{% url 'shop:products' %}"
           ><i class="fa-solid fa-shop me-2"></i>
-          <strong>BigCorp SHOP</strong></a
+          <strong>MAN SHOP</strong></a
         >
         <button
           class="navbar-toggler"
