added celery+redis for email confirmation order

--- a/payment/templates/payment/payment-success.html
+++ b/payment/templates/payment/payment-success.html
@@ -2,9 +2,9 @@
 
 {% load static %}
 
-<!--{% block head %}-->
-<!--<link rel="stylesheet" href="{% static 'payment/css/payment-success-fail.css' %}">-->
-<!--{% endblock head %}-->
+{% block head %}
+<link rel="stylesheet" href="{% static 'payment/css/payment-success-fail.css' %}">
+{% endblock head %}
 
 {% block content %}
 
