--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -12,7 +12,8 @@
 
             <div class="col-md-5 col-lg-5 order-md-first bg-light">
 
-                <img class="img-fluid mx-auto d-block" alt="Responsive image" src="{{product.image.url}}"> <!-- Product image -->
+                <img class="img-fluid mx-auto d-block" alt="Responsive image" src="{{product.image.url}}">
+                <!-- Product image -->
 
             </div>
 
@@ -53,7 +54,7 @@
 
                                 <label for="select">Qty</label>
 
-                                &nbsp; 
+                                &nbsp;
 
                                 <select id="select">
 
@@ -71,11 +72,12 @@
 
                             <div class="col-6 text-end">
 
-                                <button type="button" id="add-button" value="{{ product.id }}" class="btn btn-secondary btn-sm">
+                                <button type="button" id="add-button" value="{{product.id}}"
+                                    class="btn btn-secondary btn-sm">
 
-                                Add to cart 
+                                    Add to cart
 
-                                </button> 
+                                </button>
 
 
                             </div>
@@ -95,30 +97,36 @@
     <br>
 
 </div>
-    <script>
-    $(document).on('click', '#add-button', function (e){
+
+<script>
+    $(document).on('click', '#add-button', function (e) {
         e.preventDefault();
+
         $.ajax({
             type: 'POST',
-            url: '{% url 'cart:add_to_cart' %}',
+            url: '{% url "cart:add_to_cart" %}',
             data: {
                 product_id: $('#add-button').val(),
                 product_qty: $('#select option:selected').text(),
                 csrfmiddlewaretoken: '{{ csrf_token }}',
                 action: 'post'
             },
-            success: function (response){
+            success: function (response) {
                 document.getElementById('lblCartCount').textContent = response.qty
-            },
-            error: function (error){
-                console.log(error)
-            },
-            }
+                const add_button = document.getElementById('add-button')
+                add_button.disabled = true
+                add_button.innerText = "Added to cart"
+                add_button.className = "btn btn-success btn-sm"
 
-        )
+            },
+            error: function (error) {
+                console.log(error)
+            }
+        })
 
     })
 
-    </script>
+
+</script>
 
 {% endblock %}
