--- a/shop/templates/shop/products.html
+++ b/shop/templates/shop/products.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
+{% load thumbnail %}
+
 {% block content %}
 
 
     <!-- Introduction section -->
-
+{% if not request.user.is_authenticated %}
 <section class="py-4 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
@@ -20,6 +22,7 @@
       </div>
     </div>
   </section>
+{% endif %}
 
   <!-- All products section -->
 
